--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "emulator"
 version = "0.1.0"
-authors = ["Ben Krocké <benkrocke@hotmail.com>"]
+authors = ["Ben Krocké <benkrocke@hotmail.com>", "Corné Steenbakkers <Corne.steenbakkers@gmail.com>"]
 edition = "2018"
 
 [dependencies]
